# Trace

./: Box.h  CMakeLists.txt  Factories.h  Functions.cpp  Functions.h  Light.h  Screen.h  Shape.h  Sphere.h  Tetra.h  Vec3.cpp  Vec3.h  data.txt  headers.h  main.cpp  shapes.txt
